# rvc2api

./: .env.devcontainer  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  ANALYTICS_DASHBOARD_IMPLEMENTATION_PLAN.md  API_REFACTORING_IMPLEMENTATION_PLAN.md  AUTHENTICATION_IMPLEMENTATION_PLAN.md  AUTHENTICATION_SECURITY_ENHANCEMENT_PLAN.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOMAIN_API_MIGRATION_PLAN.md  FRONTEND_BACKEND_SEPARATION_PLAN.md  FRONTEND_RVC_INTEGRATION_PLAN.md  NETWORK_MAP_REDESIGN.md  NOTICE  PERSISTENCE_MIGRATION_PLAN.md  README.md  RVC_IMPROVEMENT_PLAN.md  dev_start.sh  eslint.config.js  flake.nix  flake.nix.poetry2nix  mkdocs.yml  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  pytest.ini  release-please-config.json  renovate.json  run_server.py  test_websocket_auth.py  test_ws_client.py  unified_auth_example.py
.claude/: README.md  settings.local.json
.claude/commands/: api-migration.md  build-and-test.md  code-quality-check.md  deploy-docs.md  domain-api-dev.md  fix-type-errors.md  manage-db.md  run-full-dev.md  rvc-debug.md  setup-can-testing.md  sync-config.md  sync-deps.md  vector-search-dev.md
.claude/instructions/: api-patterns.md  backend.md  code-quality.md  domain-api.md  frontend.md  testing.md
.devcontainer/: COLIMA.md  Dockerfile  PERFORMANCE.md  README.md  activate-nix-env.sh  devcontainer.env.sample  devcontainer.json  ensure_vcan_interfaces.sh  nix.conf  setup-colima.sh  setup-env.sh  setup-vcan.sh  specific-setup.sh
.devcontainer/config/: env.sh
.devcontainer/diagnostics/: diagnose-nix.sh  diagnose-vcan.sh
.devcontainer/lifecycle/: initialize.sh  on-create.sh  post-create.sh  post-start.sh
.devcontainer/scripts/: fix-nix-errors.sh  nix-develop-wrapper.sh  setup-dev-tools.sh  setup-nix-aliases.sh  setup-nix-config.sh  setup-nix.sh  setup-vcan.sh  specific-setup.sh
.github/: CODEOWNERS  copilot-instructions.md  pages.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/instructions/: README.md  code-style.instructions.md  dev-environment.instructions.md  documentation.instructions.md  env-vars.instructions.md  eslint-typescript-config.instructions.md  mcp-tools.instructions.md  project-overview.instructions.md  pull-requests.instructions.md  python-backend.instructions.md  python-code-style.instructions.md  react-frontend.instructions.md  testing.instructions.md  (+2 more)
0.1.0/: 404.html  index.html  sitemap.xml
backend/: __init__.py  alembic.ini  cli.py  main.py
config/: 2021_Entegra_Aspire_44R.yml  rvc.json  webhook_targets.example.yml
dev/: 404.html  CNAME  index.html  sitemap.xml
dev_tools/: README.md  add_pgn_hex_field.py  document_loader.py  enhanced_document_processor.py  generate_embeddings.py  generate_faiss_index.py  migrate_rvc_json.py  query_faiss.py  test_canbus_config.py  test_document_loader.py  test_sample_chunks.py  test_vcan.py  test_vcan_setup.py  validate_rvc_json.py
docs/: CNAME  code-quality-tools.md  configuration-guide.md  configuration.md  debian-repository.md  dependency-management-scripts.md  devcontainer-vcan-guide.md  development-environments.md  docs-versioning-fixes.md  documentation-organization.md  documentation-updates-summary.md  documentation-versioning-update.md  enabling-github-pages.md  enhanced-dev-environment.md  environment-variable-integration.md  eslint-typescript-config.md  frontend-development.md  frontend-theming-assessment.md  frontend-theming.md  github-actions-summary.md  github-actions.md  github-pages-deployment.md  index.md  install-vcan-test-task.md  lightweight-notifications.md  mcp-tools-setup.md  mixed-chunking-strategies.md  mkdocs-config-update.md  mkdocs-versioning-integration.md  mkdocs-versioning.md  mkdocs.yml  nix-devcontainer-performance.md  nix-directory-structure.md  nix-environment-mapping.md  nix-getting-started.md  nix-integration-simplified.md  nix-minimal-config-example.md  nixos-module.md  pdf-processing-guide-new.md  pdf-processing-guide.md  (+15 more)
examples/: lightweight_notifications_example.py
frontend/: .env.development  .env.example  .env.production  .prettierignore  .prettierrc.js  CONTEXT_REORGANIZATION.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.eslint.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
latest/: 404.html  index.html  objects.inv
nix/: example-config.nix  health-check.sh  print-config.nix  secrets-example.nix  test-module.nix
resources/: README.md  rvc-2023-11_chunks.json  sample_chunks.json  test_data.json
scripts/: add_missing_safety_classifications.py  add_vcan_test_task.sh  build-frontend.sh  debug_mike.py  detect_unused_dependencies.py  docs_version.fish  docs_version.sh  export-config-schema.py  export_openapi.py  generate-nix-docs.sh  generate_repo_key.sh  migrate-to-nix.sh  monitor_notification_performance.py  run_notification_integration_tests.sh  setup_versioned_docs.fish  setup_versioned_docs.sh  sync_dependencies.py  validate-config.py  validate_feature_definitions.py  validate_safety_implementation.py
tests/: __init__.py  conftest.py  conftest_performance.py  factories.py  safety_validation_test.py  test_api_missing_dgns.py  test_canbus_decoder_safety.py  test_feature_manager_safety.py  test_notification_analytics.py  test_persistence_fixtures.py  test_rvc_decoder_comprehensive.py  test_safety_integration.py  test_webhook_channel.py
web_ui/: .env.development  THEME_MIGRATION.md  eslint.config.js  eslint.config.js.new  eslint.config.mjs  index.html  jest.config.js  jest.config.ts  package-lock.json  package.json  tailwind.config.js  theme-test.html  tsconfig.app.json  tsconfig.test.json  vite.config.ts
web_ui.backup/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json
web_ui_backup/: .env.local.example  .eslintrc.json  ESLINT_GUIDE.md  README.md  eslint.config.js  jest.config.cjs  jest.setup.ts  postcss.config.js  postcss.config.js.bak  tailwind.config.js  tsconfig.eslint.json  tsconfig.test.json  tsconfig.test.tsbuildinfo
(+1009 files in other folders)
